--- a/index.html
+++ b/index.html
@@ -197,7 +197,15 @@
         }
       }
     </style>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
+      gtag("config", "G-XSXFCNKR6M");
+    </script>
     <script>
       window.console = window.console || function (t) {};
     </script>
@@ -207,6 +215,11 @@
         window.parent.postMessage("resize", "*");
       }
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XSXFCNKR6M"
+    ></script>
   </head>
 
   <body translate="no">
